--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.16",
+    "@iconify-json/ic": "^1.1.13",
     "@liou666/eslint-config-vue": "^0.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "electron": "^23.1.1",
@@ -40,6 +42,7 @@
     "vite-plugin-electron-renderer": "^0.12.1",
     "vue-tsc": "^1.1.7"
   },
+  "nodeVersion": ">=17",
   "eslintConfig": {
     "extends": [
       "@liou666/eslint-config-vue"
