feat: access the azure voice system

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
+# OpenAi Key
 VITE_OPENAI_API_KEY=xxx
+# Network Proxy
 VITE_SERVE_PROXY=xxx
+# Aruze Key
+VITE_SCRIPTION_KEY=dxxx
+# Aruze Region
+VITE_REGION=xxx
