--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,9 @@ release
 *.sln
 *.sw?
 
-# lockfile
-package-lock.json
-pnpm-lock.yaml
-yarn.lock
+# # lockfile
+# package-lock.json
+# pnpm-lock.yaml
+# yarn.lock
 
 .env
