chore: update ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,5 +41,5 @@ jobs:
       # - name: Test
       #   run: pnpm run test
 
-      - name: Build
-        run: pnpm run build
+      # - name: Build
+      #   run: pnpm run build
