chore: update release scripts

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint:fix": "eslint . --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s 0",
     "release:app": "electron-builder --publish always",
-    "release:version": "npx standard-version"
+    "release:version": "npx standard-version && git push origin --follow-tags"
   },
   "dependencies": {
     "@vueuse/core": "^9.13.0",
