chore: pnpm congig

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,8 @@
 # shamefully-hoist=true
 strict-peer-dependencies=false
 # registry=https://registry.npmmirror.com/
+node-linker=hoisted
+
+public-hoist-pattern=*
+
+shamefully-hoist=true
