--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s 0",
-    "release:app": "electron-builder --publish always",
+    "release:app": "vite build && electron-builder --publish always",
     "release:version": "npx standard-version && git push origin --follow-tags"
   },
   "dependencies": {
