chore: env file

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
-# OpenAi Key
-VITE_OPENAI_API_KEY=xxx
-# Network Proxy
+# OpenAi Key (required)
+VITE_OPENAI_API_KEY=xxx 
+
+# Network Proxy (not required)
 VITE_SERVE_PROXY=xxx
-# Aruze Key
-VITE_SCRIPTION_KEY=dxxx
-# Aruze Region
+
+# Aruze tts Key (required for tts)
+VITE_SCRIPTION_KEY=xxx
+
+# Aruze tts Region (required for tts , e.g eastasia1)
 VITE_REGION=xxx
+
+# Aruze translate Key (required for translate)
+VITE_TRANSLATE_KEY=xxx
