--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build && electron-builder",
+    "build": "vue-tsc --noEmit && vite build",
+    "build:app": "pnpm build && electron-builder",
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s 0",
-    "release:app": "vite build && electron-builder --publish always",
+    "release:win": "rimraf release && pnpm build && electron-builder --win --publish always",
+    "release:app": "rimraf release && pnpm build && electron-builder --mac --win --publish always",
     "release:version": "npx standard-version && git push origin --follow-tags"
   },
   "dependencies": {
@@ -46,6 +48,7 @@
     "electron": "^23.1.1",
     "electron-builder": "^23.6.0",
     "eslint": "^8.36.0",
+    "rimraf": "^5.0.0",
     "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.15.1",
     "vite": "^4.1.4",
