--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.13.0",
+    "dexie": "^3.2.3",
     "element-plus": "^2.3.3",
     "eventsource-parser": "^0.1.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.26.0",
@@ -44,6 +45,7 @@
     "@iconify-json/eos-icons": "^1.1.6",
     "@iconify-json/ic": "^1.1.13",
     "@liou666/eslint-config-vue": "^0.0.1",
+    "@types/dexie": "^1.3.1",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "conventional-changelog-cli": "^2.2.2",
