--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eventsource-parser": "^0.1.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.26.0",
     "pinia": "^2.0.33",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "unocss": "^0.50.4",
     "uuid": "^9.0.0",
     "vue": "^3.2.47",
