feat: 数据持久化，头像支持自定义 (#10)

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ VITE_SERVE_PROXY=xxx
 # Aruze tts Key (required for tts)
 VITE_SCRIPTION_KEY=xxx
 
-# Aruze tts Region (required for tts , e.g eastasia1)
-VITE_REGION=xxx
+# # Aruze tts Region (required for tts , e.g eastasia1) 已经不需要了，直接在界面中指定
+# VITE_REGION=xxx
 
 # Aruze translate Key (required for translate)
 VITE_TRANSLATE_KEY=xxx
