chore: env file

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-# OpenAi Key (required)
+# OpenAi Key (not required) 可在前端界面中配置
 VITE_OPENAI_API_KEY=xxx 
 
-# Network Proxy (not required)
+# Network Proxy (not required) 可在前端界面中配置
 VITE_SERVE_PROXY=xxx
 
-# Aruze tts Key (required for tts)
+# Aruze tts Key (required for tts) 如果指定了VITE_TTS_ACCESS_PASSWORD 则必填
 VITE_SCRIPTION_KEY=xxx
 
-# # Aruze tts Region (required for tts , e.g eastasia1) 已经不需要了，直接在界面中指定
-# VITE_REGION=xxx
+# # Aruze tts Region (required for tts , e.g eastasia1) 如果指定了VITE_TTS_ACCESS_PASSWORD 则必填
+VITE_REGION=xxx
 
-# Aruze translate Key (required for translate)
-VITE_TRANSLATE_KEY=xxx
+# 语音服务的访问密码
+VITE_TTS_ACCESS_PASSWORD=123456
