chore: mac build for default

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -16,7 +16,7 @@
   ],
   "mac": {
     "artifactName": "${productName}_${version}.${ext}",
-    "target": ["dmg"],
+    "target": ["default"],
     "entitlements": "entitlements.mac.plist",
     "hardenedRuntime": true,
     "extendInfo": {
