--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "microsoft-cognitiveservices-speech-sdk": "^1.26.0",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0",
+    "say": "^0.16.0",
     "unocss": "^0.50.4",
     "uuid": "^9.0.0",
     "vue": "^3.2.47",
