add AWS Polly,Transcribe

--- a/package.json
+++ b/package.json
@@ -34,13 +34,19 @@
     "release:version": "npx standard-version && git push origin --follow-tags"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity": "^3.363.0",
+    "@aws-sdk/client-polly": "^3.363.0",
+    "@aws-sdk/client-transcribe-streaming": "^3.363.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.363.0",
     "@iconify-json/svg-spinners": "^1.1.1",
     "@vueuse/core": "^9.13.0",
     "api2d": "^0.1.18",
+    "aws-sdk": "^2.1409.0",
     "dexie": "^3.2.3",
     "electron-updater": "^5.3.0",
     "element-plus": "^2.3.3",
     "eventsource-parser": "^0.1.0",
+    "microphone-stream": "^6.0.1",
     "microsoft-cognitiveservices-speech-sdk": "^1.26.0",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0",
